2012-06-06  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/agentes/planned_downtime.php: merged from trunk.
	fixed that 'Affect' column at 'planned downtime' might show
	bad values. cleaned source code style.

2012-06-05  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_modules.php: Fixed bug: When you
	copy a policy module, still liked to policy.

2012-06-05 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Fixed a missing group icons

2012-06-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/agent.php: Fixed function search_agent when 
	metaconsole is activated an one of the nodes return no agents.

2012-06-04  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed bug: 
	Standard user can not add actions to an alert.

2012-06-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions_io.php: Added new safe string function
	to scape strings to use it in regular expressions and
	change the parameters of enterprise functions to be
	compatible con last changes

2012-06-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/massive/massive_enable_disable_alerts.php
	 godmode/massive/massive_delete_action_alerts.php
	 godmode/massive/massive_standby_alerts.php
	 godmode/massive/massive_add_action_alerts.php: Fixed javascript
	 behavior when multiselect combos are selected by keyboard input.

2012-06-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/massive/massive_edit_modules.php: Fixed group recursion 
	checkbox in massive module edition.

2012-06-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Added units to
	module massive editor and missed help bubble in the same
	editor to post process field

2012-05-31 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/functions_pchart.php
	 include/graphs/pChart/pDraw.class.php: Graphs with all data equal 
	 to zero are displayed correctly.
