@@ -112,7 +112,7 @@ $end_date = get_parameter_post ('end_date', 0);
 $start_time = get_parameter_post ('start_time', 0);
 $end_time = get_parameter_post ('end_time', 0);
 $export_type = get_parameter_post ('export_type', 'data');
-$export_btn = get_parameter_post ('export_btn', 0);
+$export_btn = get_parameter ('export_btn', 0);
 
 if (!empty ($export_btn) && !empty ($module)) {
 
@@ -231,7 +231,7 @@ elseif (!empty ($export_btn) && empty ($module)) {
 }
 
 if (empty($export_btn)) {
-	echo '<form method="post" action="index.php?sec=reporting&amp;sec2=operation/agentes/exportdata" name="export_form">';
+	echo '<form method="post" action="index.php?sec=reporting&amp;sec2=operation/agentes/exportdata" name="export_form" id="export_form">';
 	
 	$table->width = '98%';
 	$table->border = 0;
@@ -314,8 +314,8 @@ if (empty($export_btn)) {
 	html_print_table ($table);
 
 	// Submit button
-	echo '<div class="action-buttons" style="width:80%;">';
-		html_print_submit_button (__('Export'), 'export_btn', $disabled_export_button, 'class="sub wand"');
+	echo '<div class="action-buttons" style="width:98%;">';
+		html_print_button (__('Export'), 'export_btn', $disabled_export_button, 'change_action()', 'class="sub wand"');
 	echo '</div></form>';
 }
 
@@ -376,9 +376,10 @@ $(document).ready (function () {
 	$("select#export_type").trigger('change');
 });
 
-$("select#export_type").change (function () {
+function change_action() {
 	type = $("#export_type").val();
 	var f = document.forms.export_form;
+
 	switch (type) {
 		case 'csv':
 			f.action = "operation/agentes/exportdata.csv.php";
@@ -388,10 +389,11 @@ $("select#export_type").change (function () {
 			break;
 		case 'avg':
 		case 'data':
-			f.action = "index.php?sec=reporting&sec2=operation/agentes/exportdata";
+			f.action = "index.php?sec=reporting&sec2=operation/agentes/exportdata&export_btn=1";
 			break;
 	}
-});
+	$("#export_form").submit();
+}
 
 function submit_group() {
 	var f = document.forms.export_form;
